@@ -1,4 +1,4 @@
-package com.mm_mk.Authentication.security;
+package com.mm_mk.Authentication.util;
 
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
@@ -6,8 +6,7 @@ import org.springframework.core.io.ClassPathResource;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.security.KeyFactory;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.spec.PKCS8EncodedKeySpec;
@@ -16,19 +15,25 @@ import java.util.Date;
 
 @Component
 public class JwtUtils {
+
     private final RSAPrivateKey privateKey;
 
     public JwtUtils() throws Exception {
-        // Load private key
-        String privateKeyContent = new String(Files.readAllBytes(
-                Paths.get(new ClassPathResource("certifications/private.pem").getURI())))
-                .replaceAll("-----\\w+ PRIVATE KEY-----", "")
-                .replaceAll("\\s", "");
+        // Load private.pem from resources/certifications/
+        ClassPathResource resource = new ClassPathResource("certifications/private.pem");
+        String privateKeyContent;
+
+        try (InputStream inputStream = resource.getInputStream()) {
+            privateKeyContent = new String(inputStream.readAllBytes())
+                    .replaceAll("-----BEGIN (.*)-----", "")
+                    .replaceAll("-----END (.*)-----", "")
+                    .replaceAll("\\s", "");
+        }
+
         byte[] decodedPrivate = Base64.getDecoder().decode(privateKeyContent);
         PKCS8EncodedKeySpec keySpecPrivate = new PKCS8EncodedKeySpec(decodedPrivate);
         KeyFactory kf = KeyFactory.getInstance("RSA");
         this.privateKey = (RSAPrivateKey) kf.generatePrivate(keySpecPrivate);
-
     }
 
     public String generateToken(UserDetails userDetails) {
@@ -39,5 +44,4 @@ public class JwtUtils {
                 .signWith(privateKey, SignatureAlgorithm.RS256)
                 .compact();
     }
-
 }
